# Swifttunnel-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/csharp/: SwiftTunnelSDK.cs
bindings/python/: swifttunnel.py
examples/: basic.c  basic.cs  basic.py
include/: swifttunnel.h
src/: callbacks.rs  error.rs  lib.rs  runtime.rs
src/auth/: client.rs  manager.rs  mod.rs  oauth_server.rs  storage.rs  types.rs
src/split_tunnel/: interceptor.rs  mod.rs  process_cache.rs  process_tracker.rs  process_watcher.rs
src/vpn/: auto_routing.rs  config.rs  connection.rs  geolocation.rs  mod.rs  relay.rs  servers.rs
