[package]
name = "swifttunnel-sdk"
version = "1.0.0"
edition = "2021"
authors = ["SwiftTunnel <support@swifttunnel.net>"]
description = "SwiftTunnel VPN SDK - V3 relay with forced split tunneling and built-in auth"

[lib]
crate-type = ["cdylib"]
name = "swifttunnel"

[dependencies]
# Windows API - version 0.62 to match ndisapi dependency
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Windows Packet Filter (ndisapi) for packet-level split tunneling
ndisapi = "0.6"

# Secure credential storage (DPAPI on Windows)
keyring = "3"

# Cryptography for PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Lightweight HTTP server for OAuth callback
tiny_http = "0.12"

# Per-CPU parallel packet processing
crossbeam-channel = "0.5"

# Lock-free Arc swapping for BSOD-safe RCU pattern
arc-swap = "1.7"

num_cpus = "1.16"

# Stack-allocated buffers for zero-alloc packet processing
arrayvec = "0.7"

# Fast mutex
parking_lot = "0.12"

# Home directory detection
dirs = "5.0"

# Lazy statics
once_cell = "1.19"

# URL handling
url = "2"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
